<resources>
    <string name="app_name">activeTAN</string>
    <string name="app_description">TAN-Generator für das activeTAN-Verfahren im Online-Banking</string>
    <string name="welcome_title_html">
        <![CDATA[
            Willkommen zu activeTAN<sup><small>&#xae;</small></sup>
        ]]>
    </string>
    <string name="welcome_subtitle">Das moderne TAN-Verfahren für Ihr Online-Banking</string>
    <string name="welcome_subtitle_feature1">einfach</string>
    <string name="welcome_subtitle_feature2">schnell</string>
    <string name="welcome_subtitle_feature3">sicher</string>
    <string name="welcome_subtitle_feature4">Made in Germany</string>
    <string name="welcome_start_activation_label">Diese App wurde noch nicht aktiviert</string>
    <string name="welcome_start_activation_instruction_letter">Starten Sie jetzt die Aktivierung und lesen Sie den QR-Code von Ihrem activeTAN-Aktivierungsbrief ein.</string>
    <string name="welcome_start_activation_instruction_email">Starten Sie jetzt die Aktivierung und lesen Sie den QR-Code von Ihrer activeTAN-Aktivierungs-E-Mail ein.</string>
    <string name="welcome_start_activation_start">Aktivierung starten</string>
    <string name="menu_item_instruction">Anleitung</string>
    <string name="instructionActivationTitle">Aktivierung</string>
    <string name="instructionActivationSubtitle">Vor Inbetriebnahme&#x202f;</string>
    <string name="instructionStep0">Vorbereitung</string>
    <string name="instructionStep1">Schritt 1</string>
    <string name="instructionStep2">Schritt 2</string>
    <string name="instructionStep3">Schritt 3</string>
    <string name="instructionStep4">Schritt 4</string>
    <string name="instructionGoToTanAdmin">Melden Sie sich im Online-Banking an. Wählen Sie den Menüpunkt: Zugangsdaten und activeTAN-Verwaltung.</string>
    <string name="instructionScanLetter">Scannen Sie mit dieser activeTAN-App den QR-Code von Ihrem Aktivierungsbrief.</string>
    <string name="instructionRequestNewLetter">Haben Sie noch keinen Aktivierungsbrief erhalten? Sie können jederzeit im Online-Banking einen neuen Aktivierungsbrief anfordern.</string>
    <string name="instructionScanEmail">Mit dem Start der Aktivierung erhalten Sie automatisch eine Aktivierungs-E-Mail. Scannen Sie mit dieser activeTAN-App den QR-Code von Ihrer E-Mail.</string>
    <string name="instructionEmailLink">Haben Sie die E-Mail auf Ihrem Smartphone empfangen? Aktivieren Sie stattdessen den Link in der Aktivierungs-E-Mail.</string>
    <string name="instructionEnterSerial">Die activeTAN-App generiert eine Seriennummer. Geben Sie die Seriennummer im Online-Banking ein.</string>
    <string name="instructionGoToNextStep">Klicken Sie in der App und im Online-Banking jeweils auf „Weiter“, um zum nächsten Schritt zu gelangen.</string>
    <string name="instructionScanQrScreen">Im Online-Banking wird ein QR-Code angezeigt. Scannen Sie den QR-Code mit dieser activeTAN-App und Ihrem Smartphone.</string>
    <string name="instructionEnterStartTan">Die activeTAN-App generiert eine Start-TAN. Geben Sie die Start-TAN im Online-Banking ein.</string>
    <string name="instructionCompleteActivation">Bestätigen Sie die Eingabe im Online-Banking. Die Aktivierung ist damit abgeschlossen.</string>
    <string name="instructionArchiveLetter">Nehmen Sie den Aktivierungsbrief zu Ihren Bankunterlagen, um die Aktivierung später bei Bedarf erneut durchführen zu können.</string>
    <string name="instructionPrimaryUseTitle">Verwendung</string>
    <string name="instructionPrimaryUseSubtitle">TAN generieren&#x202f;</string>
    <string name="instructionEnterOrder">Geben Sie Ihren Auftrag im Online-Banking ein.</string>
    <string name="instructionSelectTanMethod">Falls Sie mehrere TAN-Verfahren benutzen, wählen Sie activeTAN zur Freigabe der Transaktion aus.</string>
    <string name="instructionCheckOrder">Auf dem Smartphone werden Auftragsdaten angezeigt. Prüfen Sie die Daten und bestätigen Sie den Auftrag in der activeTAN-App.</string>
    <string name="instructionEnterTan">Die activeTAN-App generiert eine TAN. Geben Sie die TAN im Online-Banking ein.</string>
    <string name="instructionCompletePrimaryUse">Bestätigen Sie die Eingabe im Online-Banking. Der Auftrag wird freigegeben.</string>
    <string name="instructionBankingAppSubtitle">Mit Banking-App&#x202f;</string>
    <string name="instructionSelectTanMethodBankingApp">Falls Sie mehrere TAN-Verfahren benutzen, wählen Sie in den Online-Banking-Einstellungen der Banking-App das activeTAN-Verfahren aus.</string>
    <string name="instructionEnterOrderBankingApp">Geben Sie Ihren Auftrag in der Banking-App ein.</string>
    <string name="instructionSwitchFromBankingApp">Beim Senden des Auftrags wird die activeTAN-App automatisch gestartet.</string>
    <string name="instructionCheckOrderBankingApp">In der activeTAN-App werden Auftragsdaten angezeigt. Prüfen Sie die Daten und geben Sie den Auftrag frei.</string>
    <string name="instructionSwitchToBankingApp">Die Banking-App führt den Auftrag mit einer TAN automatisch aus. Die manuelle Eingabe der TAN entfällt.</string>
    <string name="instructionSecurityTitle">Sicherheit</string>
    <string name="instructionSecuritySubtitle">Nutzungshinweise&#x202f;</string>
    <string name="instructionLockScreen">Sperrbildschirm</string>
    <string name="instructionEnableLockScreen">Sichern Sie Ihr Smartphone mit einem Sperrbildschirm (Muster, PIN oder Kennwort). Je nach Gerät können Sie auch biometische Merkmale (Fingerabdruck oder Iris) zum Entsperren benutzen.</string>
    <string name="instructionDisabledLockScreen">Wenn kein Sperrbildschirm eingerichtet wird, verliert die activeTAN-App automatisch ihre Aktivierung und kann nicht mehr benutzt werden. Sie müssen den Sperrbildschirm reaktivieren, um die activeTAN-App erneut nutzen zu können.</string>
    <string name="instructionTwoFactorSecurity">2-Faktor-Sicherheit</string>
    <string name="instructionTwoDevices">Die Verwendung der activeTAN-App macht Ihr Online-Banking sicherer. Die Datenübertragung mittels QR-Code stellt sicher, dass Auftragsdaten auf einem unabhängigen zweiten Gerät geprüft werden können.</string>
    <string name="instructionEasyOfflineUse">Weitere Vorteile: Der QR-Code kann schnell und komfortabel gescannt werden. Nach der einmaligen Aktivierung funktioniert activeTAN sogar ohne Internetverbindung.</string>
    <string name="instructionBankingAppIntegration">Bei Verwendung unserer Banking-App auf demselben Gerät entfällt das Scannen des QR-Codes und die Eingabe der TAN, so dass Aufträge noch schneller und einfacher freigegeben werden können. Die beiden Apps bleiben dabei durch das Betriebssystem sicher getrennt.</string>
    <string name="instructionUpdates">Aktualisierungen</string>
    <string name="instructionEnableAutomaticUpdates">Sichern Sie alle Ihre Geräte ab, indem Sie Sicherheitsupdates automatisch installieren. So können potentielle Schwachstellen durch die Hersteller schnell behoben werden.</string>
    <string name="menu_item_imprint">Impressum</string>
    <string name="menu_item_copyright">Softwarelizenz</string>
    <string name="license_introduction">
        <![CDATA[
            <p>
                Dieses Programm ist Freie Software und unter den Bedingungen der
                GNU General Public License Version 3 lizenziert.
                Sie dürfen dieses Programm uneingeschränkt nutzen und unter bestimmen Bedingungen
                weitergeben. Ihre vollständigen Rechte finden Sie in den Lizenzbestimmungen,
                die unten aufgeführt sind. Die international juristisch anerkannte Softwarelizenz
                ist in englischer Sprache verfasst, inoffizielle Übersetzungen finden Sie unter
                <a href="https://www.gnu.org/licenses/translations#GPL">www.gnu.org/licenses/translations#GPL</a>.
            </p>
            <p>
                <i>QR Code</i> ist ein eingetragenes Warenzeichen von DENSO WAVE INCORPORATED.
            </p>
            <p>
                Dieses Programm basiert auf den folgenden Projekten von Drittanbietern:
            </p>
            <ul>
                <li>
                    ZXing: Bibliothek für Bilderkennung und Verarbeitung von 1D/2D-Barcodes
                    <br/>
                    <a href="https://github.com/zxing/zxing/">github.com/zxing/zxing</a>
                </li>
                <li>
                    Barcode-Scanner: Bibliothek für kamera-basiertes Lesen von Barcodes
                    <br/>
                    <a href="https://github.com/dm77/barcodescanner/">github.com/dm77/barcodescanner</a>
                </li>
                <li>
                    Folgende Jetpack-Bibliotheken aus dem Android Open Source Project (AOSP) von Google:
                    Appcompat, Biometric, ConstraintLayout, RecyclerView, Room, Test
                    <br/>
                    <a href="https://developer.android.com/jetpack">developer.android.com/jetpack</a>
                </li>
                <li>
                    Material Design Icons von Google
                    <br/>
                    <a href="https://github.com/google/material-design-icons/">github.com/google/material-design-icons</a>
                </li>
            </ul>
        ]]>
    </string>
    <string name="menu_item_privacy">Datenschutz</string>
    <string name="title_privacy_statement">Datenschutzerklärung</string>
    <string name="menu_item_settings">Einstellungen</string>
</resources>