<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        >

        <item
            android:id="@+id/itemSettings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/menu_item_settings" />

        <item
            android:id="@+id/itemInstruction"
            android:icon="@drawable/ic_info_black_24dp"
            android:title="@string/menu_item_instruction" />

        <item
            android:id="@+id/itemPrivacy"
            android:icon="@drawable/ic_security_black_24dp"
            android:title="@string/menu_item_privacy" />

        <item
            android:id="@+id/itemCopyright"
            android:icon="@drawable/ic_copyright_black_24dp"
            android:title="@string/menu_item_copyright" />

        <item
            android:id="@+id/itemImprint"
            android:icon="@drawable/ic_account_balance_black_24dp"
            android:title="@string/menu_item_imprint" />

    </group>
</menu>